[fix] fixed scrollbar on files

--- a/app/webroot/css/object/files.css
+++ b/app/webroot/css/object/files.css
@@ -7,7 +7,7 @@
         height:                             60%;
         width:                              100%;
         overflow:                           hidden;
-        overflow-y:                         auto;
+        overflow-y:                         scroll;
         transition:                         1s;
         margin:                             0 0 25px 0;
     }
